--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Restaurant</title>
   </head>
   <body>
-    <h1>Welcome to our Restaurant</h1>
+    <h1>Welcome to My Restaurant</h1>
 
     <ui-view></ui-view>
 
