--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html ng-app='MenuApp'>
   <head>
     <meta charset="utf-8">
@@ -10,18 +10,14 @@
 
     <ui-view></ui-view>
 
-    <!-- Libraries -->
   <script src="lib/angular.min.js"></script>
   <script src="lib/angular-ui-router.min.js"></script>
 
-  <!-- Modules -->
   <script src="src/menuapp/menuapp.module.js"></script>
   <script src="src/menuapp/data.module.js"></script>
 
-  <!-- Routes -->
   <script src="src/routes.js"></script>
 
-  <!-- 'MenuApp' module artifacts -->
   <script src="src/menuapp/menudata.service.js"></script>
   <script src="src/menuapp/categories.component.js"></script>
   <script src="src/menuapp/items.component.js"></script>
@@ -30,3 +26,39 @@
 
   </body>
 </html>
+ -->
+<!DOCTYPE html>
+<html ng-app='MenuApp'>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Restaurant</title>
+  </head>
+  <body>
+    <h1>Welcome to My Restaurant</h1>
+    <div class="container">
+      <ui-view></ui-view>
+    </div>
+
+    <!-- Libraries -->
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-ui-router.min.js"></script>
+
+    <!-- Modules -->
+    <script src="src/menuapp/menuapp.module.js"></script>
+    <script src="src/menuapp/data.module.js"></script>
+
+    <!-- Routes -->
+    <script src="src/routes.js"></script>
+
+    <!-- 'MenuApp' module artifacts -->
+    <script src="src/menuapp/menudata.service.js"></script>
+    <script src="src/menuapp/categories.component.js"></script>
+    <script src="src/menuapp/items.component.js"></script>
+    <script src="src/menuapp/categories.controller.js"></script>
+    <script src="src/menuapp/items.controller.js"></script>
+
+  </body>
+</html>
+
+ 
